# soyuz

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/basic_render/: Cargo.toml
examples/basic_render/src/: cube.glb  main.rs  plane.glb  shader.wgsl
examples/clear/: clear.rs
examples/settings/: settings.rs
examples/triangle/: triangle.rs  triangle.wgsl
macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
soyuz-app/: Cargo.toml
soyuz-app/src/: app.rs  lib.rs
soyuz-gfx/: Cargo.toml
soyuz-gfx/src/: lib.rs  pass.rs  pipeline.rs  shader.rs
src/: lib.rs
src/assets/: mod.rs
src/assets/caches/: mesh.rs  mod.rs  texture.rs
src/assets/loaders/: gltf.rs  mod.rs
src/assets/vertices/: gltf.rs  mod.rs
src/ecs/: mod.rs
src/ecs/components/: assets.rs  light.rs  material.rs  mesh.rs  mod.rs  transform.rs
src/ecs/events/: mod.rs
src/ecs/resources/: assets.rs  camera.rs  depth.rs  input.rs  lighting.rs  mod.rs  mouse.rs  rendering.rs  shadow.rs
src/ecs/systems/: camera.rs  light.rs  mod.rs  shadow.rs
src/ecs/systems/rendering/: core.rs  mod.rs
src/engine/: app.rs  render.rs
src/graphics/: mod.rs
src/graphics/core/: bind_group.rs  error.rs  gpu.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs  surface.rs
src/graphics/core/buffer/: index.rs  mod.rs  storage.rs  uniform.rs  vertex.rs
src/graphics/pipelines/: basic.rs  mod.rs  shadow.rs
src/graphics/resources/: camera.rs  mesh.rs  mod.rs  sampler.rs  texture.rs  vertex.rs
src/shaders/: basic.wgsl  shadow.wgsl
