[package]
name = "soyuz"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.4.0"
thiserror = "2.0.17"
wgpu = "27.0.1"
winit = "0.30.12"
bytemuck = { version = "1.24.0", features = ["derive"] }
soyuz_macros = { path = "./macros" }
glam = { version = "0.30.9", features = ["bytemuck"] }
image = "0.25.8"
bevy_ecs = "0.17.2"
gltf = "1.4.1"

[[example]]
name = "basic_render"
path = "examples/basic_render/src/main.rs"
