[workspace]
members = ["soyuz-app", "soyuz-gfx", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
