[package]
name = "examples"
version.workspace = true
edition.workspace = true

[dependencies]
soyuz-app = { path = "../soyuz-app" }

[[example]]
name = "clear"
path = "clear/clear.rs"

[[example]]
name = "triangle"
path = "triangle/triangle.rs"

[[example]]
name = "settings"
path = "settings/settings.rs"
